--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 REACT_APP_CHAIN_ID="11111"
 REACT_APP_NETWORK_URL='https://fullnode.intercroneswap.com'
-REACT_APP_TRON_NETWORK="mainnet"
+REACT_APP_TRON_NETWORK="NILE"
 TOKEN_LIST_URL='https://intercroneswap.com/troniswap.json'
-#TOKEN_LIST_URL_LOCAL="http://localhost:3000/troniswap.json"
+#TOKEN_LIST_URL_LOCAL="http://173.249.54.208:3000/troniswap.json"
 #TOKEN_LIST_URL_DEV='https://dev.intercroneswap.com/troniswap.json'
 #TOKEN_LIST_URL_MAIN='https://intercroneswap.com/troniswap.json'
