--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@web3-react/core": "^6.1.9",
     "ajv": "^6.12.3",
     "apexcharts": "^3.35.3",
+    "async": "^3.2.4",
     "cids": "^1.0.0",
     "copy-to-clipboard": "^3.2.0",
     "ethers": "^5.6.9",
