--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "sass": "^1.52.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "5.3.1",
+    "trongrid": "^1.2.6",
     "tronweb": "^5.1.0",
     "typescript": "4.3.2",
     "wcag-contrast": "^3.0.0",
