--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cids": "^1.0.0",
     "copy-to-clipboard": "^3.2.0",
     "ethers": "^5.6.9",
+    "gsap": "^3.11.5",
     "jazzicon": "1.5.0",
     "lodash.flatmap": "4.5.0",
     "luxon": "^2.0.2",
@@ -38,6 +39,7 @@
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.8",
     "react-ga": "^3.3.0",
+    "react-gsap": "^3.2.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
