separate components and merge used usecallback for dispatch

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@ethersproject/experimental": "^5.6.3",
     "@intercroneswap/java-tron-provider": "^0.0.12",
     "@intercroneswap/tronlink-provider": "^0.0.4",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
@@ -30,13 +32,15 @@
     "multicodec": "^3.2.1",
     "multihashes": "^4.0.3",
     "node-vibrant": "^3.2.1-alpha.1",
+    "notistack": "^3.0.1",
     "polished": "^4.2.2",
     "qs": "^6.9.4",
-    "react": "^17.0.2",
+    "react": "16.14.0",
     "react-apexcharts": "^1.4.0",
     "react-confetti": "^6.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-device-detect": "^1.6.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "16.14.0",
     "react-feather": "^2.0.8",
     "react-ga": "^3.3.0",
     "react-gsap": "^3.2.1",
@@ -96,8 +100,9 @@
     "@types/multicodec": "^2.1.0",
     "@types/node": "^16.7.13",
     "@types/qs": "^6.9.2",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.2",
+    "@types/react": "^18.0.26",
+    "@types/react-copy-to-clipboard": "^5.0.4",
+    "@types/react-dom": "^18.0.9",
     "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.8",
