--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-feather": "^2.0.8",
     "react-ga": "^3.3.0",
     "react-gsap": "^3.2.1",
+    "react-notifications-component": "^4.0.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
