--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.8.2",
     "@types/rebass": "4.0.5",
     "@walletconnect/web3-provider": "^1.8.0",
+    "@web3-react/abstract-connector": "^6.0.7",
     "@web3-react/core": "^6.1.9",
     "ajv": "^6.12.3",
     "apexcharts": "^3.35.3",
@@ -64,6 +65,7 @@
     "wcag-contrast": "^3.0.0",
     "web-vitals": "^2.1.0",
     "web3": "^1.7.4",
+    "web3-react": "^5.0.5",
     "web3modal": "^1.9.12"
   },
   "scripts": {
