--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.130",
     "@mui/material": "^5.8.5",
     "@mui/styles": "^5.8.4",
     "@reach/dialog": "0.16.0",
